# vulntriage

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: ee72898df6cc_add_asset_tables.py
app/: __init__.py  cli.py
app/api/: main.py
app/core/: __init__.py  logging.py  policy_config.yaml  settings.py
app/db/: __init__.py  asset_models.py  models.py  session.py
app/features/: ablation.py  actionability.py  builder.py  cvss_parser.py  leakage_audit.py  policy_engine.py
app/ingest/: __init__.py  actionability_label_builder.py  base_provider.py  enrichment_providers.py  exploitdb_provider.py  label_builder.py  nvd_provider.py  orchestrator.py  qdrant_loader.py  sbom_provider.py  vulndb_provider.py
app/ml/: __init__.py  evaluation_actionability.py  evaluation_slices.py
app/ml/stacking/: __init__.py  ensemble.py  ensemble_v1_backup.py
app/ml/tabular/: __init__.py  train.py
app/ml/text/: __init__.py  embeddings.py  train.py
app/rag/: __init__.py  attck_loader.py  generator.py  llm_generator.py  retriever.py  structured_extraction.py  verifier.py
app/schemas/: asset_schemas.py  decision.py  llm_structures.py  models.py
data/: sample_assets.json  sample_vuldb.json
data/attck/: enterprise-attack.json
frontend/: Dockerfile  index.html  nginx.conf
frontend/src/: App.jsx  api.js  index.css  utils.js
frontend/src/components/: AIPipeline.jsx  Sidebar.jsx
frontend/src/pages/: Dashboard.jsx  VulnDetail.jsx  Vulnerabilities.jsx
tests/: test_actionability_features.py  test_cvss_parser.py  test_features.py  test_labels.py  test_leakage_audit.py  test_orchestrator.py  test_policy_engine.py  test_verifier.py
